--- a/index.ipynb
+++ b/index.ipynb
@@ -226,6 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    for\n",
     "    capitalize_countries = travel_destinations.\n",
     "    return capitalize_countries"
    ]
