--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for\n",
+    "    for destinations in travel_destinations\n",
+    "    \n",
     "    capitalize_countries = travel_destinations.\n",
     "    return capitalize_countries"
    ]
