--- a/index.ipynb
+++ b/index.ipynb
@@ -229,8 +229,7 @@
     "    capitalized_countries[]:\n",
     "        for destinations in travel_destinations\n",
     "        capitalized_countries.append(destinations.title())\n",
-    "    \n",
-    "    capitalize_countries = travel_destinations.\n",
+    "    capitalize_countries = travel_destinations\n",
     "    return capitalize_countries"
    ]
   },
