--- a/index.ipynb
+++ b/index.ipynb
@@ -235,10 +235,10 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_countries = []\n",
-    "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title())\n",
-    "    return capitalized_countries"
+    "    capitalized_countries[]\n",
+    "    for destinations in travel_destinations\n",
+    "        capitalized_countries.append(destinations.title())\n",
+    "    return capitalize_countries"
    ]
   },
   {
