--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,14 @@
     "    capitalized_countries[]\n",
     "    for destinations in travel_destinations\n",
     "        capitalized_countries.append(destinations.title())\n",
-    "    return capitalize_countries"
+    "    return capitalize_countries\n",
+    "\n",
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def capitalize_countries():\n",
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries"
    ]
   },
   {
