--- a/index.ipynb
+++ b/index.ipynb
@@ -236,8 +236,15 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    for destinations in travel_destinations\n",
+    "    for destinations in travel_destinations:\n",
     "        capitalized_countries.append(destinations.title())\n",
+    "    return capitalized_countries\n",
+    "\n",
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "def capitalize_countries():\n",
+    "    capitalized_countries = []\n",
+    "    for destination in travel_destinations:\n",
+    "        capitalized_countries.append(destination.title())\n",
     "    return capitalized_countries"
    ]
   },
